--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </section>
 
     <footer>
-
+        <a href="https://vdalela17.github.io/Sorting-Visualization/" target="_blank">View Live Version</a>
     </footer>
 
     <script src="./scripts/main.js"></script>   <!--This should be at the end of body and should be loaded before sorts.js-->
